--- a/static/css/calc.css
+++ b/static/css/calc.css
@@ -19,15 +19,18 @@
 
 #preview-container{
   width: calc(100% - 30px);
-  margin-left: 15px;
-  margin-bottom: 50px;
+  max-width: 500px;
+  margin-left: 50%;
+  transform: translate(-50%);
+  margin-bottom: 15px;
   height: auto;
   /* height: 60px; */
   overflow: hidden;
   background-color: var(--inputs-background-color);
   border-radius: 20px;
-  transition: var(--animation-time);
+  /* transition: var(--animation-time); */
   cursor: pointer;
+  transition: opacity var(--animation-time);
 }
 
 #preview-container>p{
@@ -35,12 +38,14 @@
   text-align: center;
   margin-top: 5px;
   padding-top: 10px;
-  margin-bottom: 5px;
+  margin-bottom: 0px;
+  font-size: medium;
 }
 
 #preview-content{
   width: 100%;
   height: 0;
+  /* display: none; */
 }
 
 #preview-content td{
@@ -52,8 +57,10 @@
   /* height: fit-content; */
   margin: 5px;
   margin-left: 50%;
+  margin-bottom: 10px;
+  margin-top: 10px;
   transform: translate(-50%);
-  height: 180px;
+  height: 160px;
 }
 
 .preview-element p{
@@ -62,21 +69,20 @@
 }
 
 .preview-element svg{
-  margin-left: 50%;
-  margin-top: 50%;
-  transform: translate(-50%, -50%);
+  margin: auto;
 }
 
 #preview-arrow{
   width: 100%;
   cursor: pointer;
-  transition: transform var(--animation-time);
+  transition: rotate var(--animation-time);
   margin-bottom: 5px;
+  rotate: -180deg;
 }
 
 #preview-arrow svg{
-  margin-left: 50%;
-  transform: translate(-50%) rotate(90deg);
+  /* margin-left: 50%; */
+  transform: rotate(90deg);
 }
 
 #preview-arrow path{
@@ -99,8 +105,67 @@ input[type=range]{
   text-align: center;
 }
 
-#highlight-select{
+#dev-inputs{
+  display: none;
+  /* display: block; */
+}
+
+.user-values-preview{
+  margin-left: 50%;
+  transform: translate(-50%);
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.user-values-preview svg{
+  margin-left: 50%;
+  /* margin-top: 50%; */
+  transform: translate(-50%, 5px);
+}
+
+.user-values-inputs{
+  margin-top: 50px;
+}
+
+.user-values-inputs table{
+  width: calc(100% - 30px);
+  margin-left: 15px;
+}
+
+.user-values-inputs>p{
   position: absolute;
-  top: 50px;
-  left: 100px;
+  left: 50%;
+  transform: translate(-50%, calc(-50% - 43px));
+  background-color: black;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-weight: bold;
+}
+
+.user-values-inputs hr{
+  color: var(--inputs-background-color);
+  background-color: var(--inputs-background-color);
+  height: 3px;
+  border: none;
+  width: calc(100% - 30px);
+  margin-bottom: 25px;
+}
+
+#optional-z-input{
+  display: none;
+}
+
+#summary-button{
+  background-color: var(--accent-color);
+  border-radius: 20px;
+  width: calc(100% - 30px);
+  margin-left: 15px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 20px;
+  box-sizing: border-box;
+  text-align: center;
+  color: black;
+  font-weight: bold;
+  cursor: pointer;
 }
