fixed option colors

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,10 +38,10 @@ select{
   line-height: 20px;
 }
 
-option{
+/* option{
   color: white;
   background-color: var(--inputs-background-color);
-}
+} */
 
 svg{
   transition: opacity var(--animation-time);
